# cudaDCA

./: .gitignore  README.md
3d-DCA/: Assemble.cpp  CMakeLists.txt  DCAfuncts.cu  Disassemble.cpp  Initialize.cu  RK45.cu  cudaDCAdriver.cu  go  hybridDCA.cu  test_inv.cu
DCAcuda/: Vals.npy  cudaDCAdriver.cu  cudaDCAdriver1.cu  makefile  mat.npy  testmax.cu
DCAcuda/d_code/: deviceAssemble.h  deviceDisassemble.h  deviceFuncts.h  deviceInitialize.h
DCAcuda/h_code/: Assemble_setup.cu  Disassemble_setup.cu  Functs.cu  Init_setup.cu  RK45.cu  classes.h  cudaDCA.cu
book-chapter-springer/full-tstep/: #run.bash#  run.bash
book-chapter-springer/solve-only/: Untitled0.ipynb
cppDCA/: DCAdriver.cu  Vals.npy  go  makefile
cppDCA/funct_bin/: Assemble.cu  DCA.cu  DCAfuncts.cu  Disassemble.cu  Initialize.cu  RK45.cu  solveBCs.cu
cuda-code/: cudaDCAdriver.cu  makefile
cuda-code/d_code/: deviceAssemble.h  deviceDisassemble.h  deviceFuncts.h  deviceInitialize.h
cuda-code/h_code/: Assemble_setup.cu  Disassemble_setup.cu  HelperFuncts.h  Init_setup.cu  MainHeader.h  RK45.cu  classes.h  cudaDCA.cu  deviceHeader.h  solveBCs.cu
dca-tests/disassembly-test/: go  plot.py
dca-tests/guess-optimal-cutoff-test/: go  makefile
ecomas-2015-release/plot/: data.mat  sort-data-gnuplot.py
hybrid_DCA/d_code/: deviceAssemble.h  deviceDisassemble.h  deviceFuncts.h
hybrid_DCA/funct_bin/: Assemble.cu  Disassemble.cu  cudaDCA.cu
hybrid_DCA2/: cudaDCAdriver.cu  cudaDCAdriver1.cu  cudaDCAdriverprintout.cu  go  makefile
hybrid_DCA2/funct_bin/: Initialize.cu  RK45.cu  cudaDCA.cu
hybrid_DCA3/: Vals.npy  cudaDCAdriver.cu  go  makefile
hybrid_DCA3/funct_bin/: Assemble.cpp  Disassemble.cpp  Functs.cu  RK45.cu  cudaDCA.cu
hybrid_DCA4/: CMakeLists.txt
hybrid_DCA5/: CMakeLists.txt  hybridDCAdriver2.cu  hybridDCAdriver3.cu
makefiletest/: makefile
openMPDCA/: cudaDCAdriver.cu  go  makefile  plot-compute-time.py
openMP_DCA/: hybridDCAdriver3.cu  plotmtx.py
openMPhybrid_DCA/: CMakeLists.txt  hybridDCAdriver.cu  hybridDCAdriver3.cu  plotpy.py
openMPhybrid_DCA/d_code/: deviceFuncts.h
optimal_DCA/: cudaDCAdriver.cu  makefile
plots/: plot.py  plot1k.py  plot2.py  plotall.py  plotf.py
release/RunSim/: runSim
test-cuda/: cudaexample.out  makefile
working/: README.md
working/3d-DCA/: CMakeLists.txt  DCAfuncts.cu  Initialize.cu  RK45.cu  hybridDCA.cu  solveBCs.cu
(+257 files in other folders)
